// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly a IDP user 1`] = `
<div
  className="account-body account-container account-profile"
>
  <div
    className="boxed-group"
  >
    <div
      className="boxed-group-inner"
    >
      <h2
        className="spacer-bottom"
      >
        my_profile.login
      </h2>
      <UserExternalIdentity
        user={
          Object {
            "email": undefined,
            "externalProvider": "github",
            "groups": Array [
              "G1",
              "G2",
            ],
            "isLoggedIn": true,
            "local": false,
            "login": undefined,
            "name": "Skywalker",
            "scmAccounts": Array [],
          }
        }
      />
    </div>
    <div
      className="boxed-group-inner"
    >
      <h2
        className="spacer-bottom"
      >
        my_profile.groups
      </h2>
      <ul
        id="groups"
      >
        <li
          className="little-spacer-bottom"
          key="G1"
          title="G1"
        >
          G1
        </li>
        <li
          className="little-spacer-bottom"
          key="G2"
          title="G2"
        >
          G2
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`should render correctly a local user 1`] = `
<div
  className="account-body account-container account-profile"
>
  <div
    className="boxed-group"
  >
    <div
      className="boxed-group-inner"
    >
      <h2
        className="spacer-bottom"
      >
        my_profile.login
      </h2>
      <p
        className="spacer-bottom"
        id="login"
      >
        luke
      </p>
    </div>
    <div
      className="boxed-group-inner"
    >
      <h2
        className="spacer-bottom"
      >
        my_profile.email
      </h2>
      <div
        className="spacer-bottom"
      >
        <p
          id="email"
        >
          john@doe.com
        </p>
      </div>
    </div>
    <div
      className="boxed-group-inner"
    >
      <h2
        className="spacer-bottom"
      >
        my_profile.groups
      </h2>
      <ul
        id="groups"
      >
        <li
          className="little-spacer-bottom"
          key="G1"
          title="G1"
        >
          G1
        </li>
        <li
          className="little-spacer-bottom"
          key="G2"
          title="G2"
        >
          G2
        </li>
      </ul>
    </div>
    <div
      className="boxed-group-inner"
    >
      <h2
        className="spacer-bottom"
      >
        my_profile.scm_accounts
        <HelpTooltip
          className="little-spacer-left"
          overlay="my_profile.scm_accounts.tooltip"
        />
      </h2>
      <ul
        id="scm-accounts"
      >
        <li
          className="little-spacer-bottom text-ellipsis"
          title="luke"
        >
          luke
        </li>
        <li
          className="little-spacer-bottom text-ellipsis"
          title="john@doe.com"
        >
          john@doe.com
        </li>
        <li
          className="little-spacer-bottom"
          key="SCM1"
          title="SCM1"
        >
          SCM1
        </li>
        <li
          className="little-spacer-bottom"
          key="SCM2"
          title="SCM2"
        >
          SCM2
        </li>
      </ul>
    </div>
  </div>
</div>
`;
